# api/scim/endpoint.go
@@ -139,3 +139,65 @@ func (c *Endpoint) UpdateGroup(id string,group models.ScimGroup) (*models.ScimGr
 	}
 	return &resp, nil
 }
+
+func (c *Endpoint) ListUsers() (*models.ListUserRequestScim, error) {
+	bytes, err := c.Client.Query("GET", "preview/scim/v2/Users", nil)
+	resp := models.ListUserRequestScim{}
+	err = json.Unmarshal(bytes, &resp)
+	if err != nil {
+		return nil, err
+	}
+
+	return &resp, nil
+}
+
+func (c *Endpoint) CreateUser(request models.ScimUser) (*models.ScimUser, error) {
+	bytes, err := c.Client.Query("POST", "preview/scim/v2/Users", request)
+	resp := models.ScimUser{}
+	err = json.Unmarshal(bytes, &resp)
+	if err != nil {
+		return nil, err
+	}
+	return &resp, nil
+}
+
+func (c *Endpoint) GetUser(id string) (*models.ScimUser,error) {
+	if id == "" {
+		return nil, fmt.Errorf("No User id provided")
+	}
+	getUserUrl := fmt.Sprintf("preview/scim/v2/Users/%s", id)
+	bytes, err := c.Client.Query("GET", getUserUrl, nil)
+	resp := models.ScimUser{}
+	err = json.Unmarshal(bytes, &resp)
+	if err != nil {
+		return nil, err
+	}
+	return &resp, nil
+}
+
+func (c *Endpoint) DeleteUser(id string) (error) {
+	if id == "" {
+		return fmt.Errorf("No User id provided")
+	}
+	deleteUserUrl := fmt.Sprintf("preview/scim/v2/Users/%s", id)
+	resp, err := c.Client.Query("DELETE", deleteUserUrl, nil)
+	fmt.Println("delete resp:",resp)
+	if err != nil {
+		return  err
+	}
+	return nil
+}
+
+func (c *Endpoint) UpdateUser(id string,group models.ScimUser) (*models.ScimUser,error) {
+	if id == "" {
+		return nil,fmt.Errorf("No User id provided")
+	}
+	updateUserUrl := fmt.Sprintf("preview/scim/v2/Users/%s", id)
+	bytes, err := c.Client.Query("PUT", updateUserUrl, group)
+	resp := models.ScimUser{}
+	err = json.Unmarshal(bytes, &resp)
+	if err != nil {
+		return &resp, err
+	}
+	return &resp, nil
+}
